static/css/styles.css
.go-button {
    width: 70px;
    height: 40px;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #212529;
    border-color: #ffb117;
    color: #ffffff;
    transition: background-color 0.3s ease-in-out;
}

.go-button:hover {
    background-color: #ffb117;
    border-color: #ffffff;
    color: white;
    color: #212529;
}

.generate-button {
    width: 150px;
    height: 50px;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #212529;
    border-color: #ffb117;
    color: #ffffff;
    transition: background-color 0.3s ease-in-out;
}

.generate-button:hover {
    background-color: #ffb117;
    border-color: #ffffff;
    color: white;
    color: #212529;
}


.custom-button {
    width: 300px;
    height: 100px;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #212529;
    border-color: #212529;
    color: white;
    transition: background-color border-color 0.3s ease-in-out;
}

.custom-button:hover {
    background-color: #383f45;
    border-color: #ffb117;
    color: white;
    transition: background-color border-color 0.3s ease-in-out;
}

.button-grid {
    margin-top: 120px;
}

.pop-in-button {
    animation: pop-in 0.5s ease-in-out;
    opacity: 1;
}

@keyframes pop-in {
    0% {
        transform: scale(0.90);
        opacity: 1;
    }
    100% {
        transform: scale(1);
        opacity: 1;
    }
}

.button-grid {
    display: flex;
    flex-wrap: wrap;
    gap: 20px;
}

.text-center {
    text-align: center;
}

.nice-font {
    font-family: 'Roboto Mono', monospace;
    font-size: 1.5rem; 
}

.form-nice-font {
    font-family: 'Roboto Mono', monospace;
    font-size: .8rem; 
}

.button-nice-font {
    font-family: 'Roboto Mono', monospace;
    font-size: 1rem; 
}

.form-control {
    width: 100%;
    max-width: 100%; 
    margin: 0 auto; 
}

.email-form-control {
    width: 60%;
    max-width: 100%; 
    margin: 0 auto; 
}

.centered-item {
    text-align: center;
    margin-top: auto;
    margin-bottom: auto;
  }

  .custom-background {
    background-color: white;
    border-radius: 10px;
    border-color: #ffb117;
    border-width: 2px;
    border-style: solid;
}

.button-border {
    border-radius: 10px;
    border-color: #ffb117;
    border-width: 1px;
    border-style: solid;
}

.button-border:hover {
    background-color: #383f45 ;
}

.underline-text-gold {
    border-bottom: 2px solid #ffb117;
}

.underline-text-white {
    border-bottom: 2px solid #ffffff;
}

body {
    background-color: #D8D9DB;
}

